# mapapoderlatam

./: .gitignore  CLAUDE.md  INFO_PROYECTO.md  MIGRATION_SUMMARY.md  README.md  docker-compose.dev.yml  start.sh
backend/: .env.example  README.md  SETUP.md  alembic.ini  app.py  init_db.py  package.json  requirements.txt
backend/ai/: claude_provider.py  gemini_provider.py  provider.py  summarizer.py
backend/alembic/: env.py
backend/config/: database.py  schema.sql  settings.py
backend/controllers/: ai_controller.py  appeals_controller.py  flags_controller.py  graph_controller.py  search_controller.py
backend/data/: demo_cases.py
backend/ingestion/: CHILECOMPRA_RUST.md  __init__.py  base.py  chilecompra_pipeline.py  normalizers.py  registry.py  runners.py
backend/models/: __init__.py  ai_summary.py  edge.py  entity.py  ingestion_control.py  node.py  relationship.py
backend/routes/: ai.py  appeals.py  cases.py  chat.py  entities.py  flags.py  graph.py  search.py  summary.py
backend/schemas/: edge.py  node.py
backend/scripts/: __init__.py  chilecompra_worker.py  discover_chilecompra.py  hydrate_chilecompra.py  ingest.py  seed_chilecompra.py  seed_data_tui.py  seed_dev.py
backend/tests/: test_chilecompra.py  test_chilecompra_pipeline.py  test_chilecompra_worker_cli.py  test_health.py  test_infolobby.py  (+2 more)
backend/tui-rs/: Cargo.toml  README.md
backend/tui-rs/src/: main.rs
backend_old/: .env.example  package-lock.json  package.json
frontend/: .env.example  Mapa de Poder.html  data-expanded.js  index.html  package-lock.json  package.json
(+83 files in other folders)
