[package]
name = "seed-tui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv = "1"
dotenvy = "0.15"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
uuid = { version = "1", features = ["v4"] }
postgres = "0.19"
serde_json = "1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
